--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -479,7 +479,7 @@ $s[n;\theta]$ -- детерминированный сигнал.
 На рисунке 	\ref{img:Dispersion in the estimation of the fundamental frequency of the voltage} представлены графики зависимостей дисперсии при оценке основной частоты напряжения от уровня шума. Также на графике отражена граница Крамера-Рао:
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {Dispersion in the estimation of the fundamental frequency of the voltage.pdf}
+	\includegraphics [scale=1.2] {Dispersion in the estimation of the fundamental frequency of the voltage.pdf}
 	\caption{Дисперсия при оценке основной частоты напряжения.}
 	\label{img:Dispersion in the estimation of the fundamental frequency of the voltage}
 \end{figure}
@@ -488,7 +488,7 @@ $s[n;\theta]$ -- детерминированный сигнал.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {Fundamental frequency offset versus noise level.pdf}
+	\includegraphics [scale=1.5] {Fundamental frequency offset versus noise level.pdf}
 	\caption{Графики зависимостей смещения основной частоты от уровня шума.}
 	\label{img:Fundamental frequency offset versus noise level}
 \end{figure}
@@ -1040,14 +1040,14 @@ $$
 \section{Выводы по разделу} \label{sec:ch1/sec7} 
 В результате анализа, произведенного в первом разделе, можно сделать следующие выводы:
 \begin{itemize}
-	\item Особенности сигналов в электрических сетях носят не существенный характер с точки зрения построения алгоритмов нахождения параметров гармоник. При работе с электрическими сетями обычно используют стандартные алгоритмы такого рода.
+\item особенности сигналов в электрических сетях носят не существенный характер с точки зрения построения алгоритмов нахождения параметров гармоник. При работе с электрическими сетями обычно используют стандартные алгоритмы такого рода;
 	
-	\item Помимо обычных алгоритмов для оценки параметров гармоник в электрических сетях также используют алгоритмы, анализирующие сигналы в переходных режимах, т.е. такие, в которых во время работы алгоритма может измениться значение какого-либо параметра. В нашей работе такие алгоритмы далее рассматриваться не будут, поскольку переходные режимы не являются целью нашей работы.
+\item помимо обычных алгоритмов для оценки параметров гармоник в электрических сетях также используют алгоритмы, анализирующие сигналы в переходных режимах, т.е. такие, в которых во время работы алгоритма может измениться значение какого-либо параметра. В нашей работе такие алгоритмы далее рассматриваться не будут, поскольку переходные режимы не являются целью нашей работы;
 	
-	\item Анализ имеющихся библиографических источников показывает, что нет известных публикаций в которых бы велась разработка алгоритмов, ориентированных на работу при определенном соотношении сигнал-шум, и что для анализа гармоник и интергармоник (для которых это соотношение отличается) применяются одинаковые алгоритмы.
+\item анализ имеющихся библиографических источников показывает, что нет известных публикаций в которых бы велась разработка алгоритмов, ориентированных на работу при определенном соотношении сигнал-шум, и что для анализа гармоник и интергармоник (для которых это соотношение отличается) применяются одинаковые алгоритмы;
 	
-	\item Алгоритмы оценки параметров гармоник, применяемые при работе с одно- и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Вопрос о причинах снижения точности и возможности построения алгоритма, достигающего этой границы в известных научных публикациях не рассмотрен.
+\item алгоритмы оценки параметров гармоник, применяемые при работе с одно- и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Вопрос о причинах снижения точности и возможности построения алгоритма, достигающего этой границы в известных научных публикациях не рассмотрен;
 	
-	\item Для решения задачи построения оптимального алгоритма для анализа спектра сигнала в электрических сетях необходимо уточнение математической модели спектра сигналов в части, описывающей точность оценки (дисперсию) параметров гармоник спектра многотонального сигнала.
+\item для решения задачи построения оптимального алгоритма для анализа спектра сигнала в электрических сетях необходимо уточнение математической модели спектра сигналов в части, описывающей точность оценки (дисперсию) параметров гармоник спектра многотонального сигнала.
 \end{itemize}
 
