--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -147,171 +147,8 @@ $c_t$ – определяется из выражения:
 
 %Листинг программы, реализующий алгоритм оценки амплитуды и фазы гармоник напряжения для интерполяционных методов приведен в \textbf{приложении ?}.
 
-\section{Корреляция} \label{sec:ch3/sect3}
 
-Корреляционный анализ широко применим для решения технических задач \cite{Oppenheim2018Digital}. 
-% Оппенгейм А., Шафер Р. Цифровая обработка сигналов. – Litres, 2018.
-В работах \cite{Elizarov2012application, Altman2012improvement} описаны практические реализации подходов для решения задач оценки гармонических составляющих напряжения. 
-%Елизаров Д. А. Применение метода чисел Фибоначчи для поиска максимума корреляционной функции //В мире научных открытий. – 2012. – №. 1. – С. 28-38.
-
-% Альтман Е. А., Елизаров Д. А., Чижма С. Н. Совершенствование алгоритма определения параметров гармоник сигналов в электрической сети для оценки качества электроэнергии //Электротехнические комплексы и системы управления. – 2012. – №. 4. – С. 5-9.
-
-Базовым параметром метода корреляционных функций является коэффициент корреляции. Для исследуемой функции напряжения формируется набор эталонов. Далее производится анализ на наличие связи в точках между параметрами исследуемого напряжения и эталона. Наибольшее значение коэффициента корреляции показывает на эталон, параметр которого необходимо выбрать. 
-
-Для того чтобы сформировать набор эталонов необходимо определить базовую точку, вокруг которой будут создаваться эталоны (обозначим ее через $B$). Эта точка выбирается из ближайших целых значений основной частоты измеряемого напряжения. Также необходимо определить шаг, с которым будут формироваться эталоны (обозначим его через $h$ ). Затем на промежутке [$B - \sfrac{1}{2}$, $B + \sfrac{1}{2}$]   необходимо произвести формирование эталонов. Для этого спектр оконной функции необходимо сдвигать вправо и влево с шагом в пределе заданного промежутка и определять $5$ точек вокруг пика. 
-
-Расчет коэффициента корреляции производиться по $5$ точкам, так как для дискретного спектра энергия гармоники (порядка $80$ \%) сосредоточена в ближайших $3-5$ отсчетах в районе максимума амплитудного спектра. Возможность смещать спектр на заданную величину без изменения амплитудного спектра обеспечивается свойством ДПФ \cite{sergienko2011digital}.
-%Сергиенко А. Б. Цифровая обработка сигналов. – БХВ-Петербург, 2011.
-Согласно данному свойству необходимо спектр окна домножить на величину $e^{-j \cdot \frac{2 \cdot \pi (B \pm i \cdot h)}{T_w}}$
-
-Таким образом, получается набор эталонных множеств из $М$  точек $W_j = {W_{j0}, W_{j1}, \cdots, W_{jM-1} }$ , каждая точка которого вычисляется по правилу:
-\begin{equation}
-	\label{eq:equation3.1}
-W_{ji} = W \left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j)}\right) 
-\end{equation}
-
-где $- \frac{M}{2} < i < \frac{M}{2}$, $0 < \bigtriangleup r_j < 1$
-
-На рисунке \ref{img:set_of_standards} показан пример построения наборов эталонов (здесь представлено три набора). Первый набор не имеет смещения относительно базовой точки. Второй набор смещен влево относительно базовой точки на величину шага формирования эталона $h$  . Третий набор смещен вправо относительно базовой точки B на величину шага формирования эталона $h$. Также для первого набора эталона определены его отсчеты БПФ. 
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.6] {set_of_standards.pdf}
-	\caption{Пример построения набора эталонов.}
-	\label{img:set_of_standards}
-\end{figure}
-
-Пусть имеется напряжение $u'(t)$ с периодом $T_s$ и спектром, ограниченным  $N$-ой гармоникой, и белым шумом $\eta$. Для ограничения длительности напряжения накладывается некоторое окно $w(t)$, имеющее отличное от нуля значение на временном отрезке $[- \frac{T_w}{T_w}, - \frac{T_w}{T_w}] $ и спектром $W(\omega)$. 
-
-В качестве весовой функции для метода корреляционных функций применяется окно Кайзера с параметром $10$. Окно Кайзера на 2048 точек с параметром $10$ представлено на рисунке \ref{img:picture3.3.1}. Основные свойства весовой функции Кайзера, а также формула для определения коэффициентов приведены в таблице \ref{app:А}.
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.75] {Kaiser_window.png}
-	\caption{Окно Кайзера.}
-	\label{img:picture3.3.1}
-\end{figure}
-
-\begin{equation}
-	\label{eq:equation3.2}
-	u(t) = u'(t) \cdot w(t) = \displaystyle\sum_{\nu=0}^{\nu=N} A_\nu e^{j \cdot \varphi_\nu} w(t) e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t} + \eta (t) \cdot w(t) = 
-\end{equation}
-
-$$
-= \displaystyle\sum_{\nu=0}^{\nu=N} A_\nu e^{j \cdot \varphi_\nu} w(t) \cdot e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t} +\eta_w(t)
-$$
-Спектр сигнала $w(t) \cdot e^{j \cdot \frac{2 \cdot \pi}{T_s} \cdot \nu \cdot t}$, как известно из свойств преобразования Фурье, представляет собой смещенный на величину $\frac{2 \pi}{T_s} \cdot \nu$ спектр сигнала $w(t)$, a именно $W \left( {\omega - \frac{2 \cdot \pi}{T_s} \cdot \nu} \right)$.
-
-
-Спектр сигнала $\eta_w(t)$ есть произведение во временной области функции $\eta(t)$ и $w(t)$, то в частотной области спектр этого сигнала есть свертка спектров указанных функций \cite{Increase_Accuracy_Yelizarov2014}:
-
-\begin{equation}
-	\label{eq:equation3.3}
-	\Theta_w(\omega) = \int\limits_{- \infty}^{\infty} \Theta (\Omega) W(\omega - \Omega) \mathrm{d}\Omega
-\end{equation}
-
-Величина $\Theta_w(\omega)$, как и $\Theta(\omega)$, является случайной. Исходя из \cite{Increase_Accuracy_Yelizarov2014} дисперсия   не зависит от частоты   и равна \cite{Altman2012formation, Davenport1960introduction}:
-
-% 36. Давенпорт В. Б., Рут В. Л. Введение в теорию случайных сигналов и шумов. М.: ИЛ. – 1960.
-
-% 84. Альтман Е. А., Елизаров Д. А. Формирование эталонной функции с действительным спектром для оценки спектра сигнала электрической сети //Динамика систем, механизмов и машин. – 2012. – №. 1.
-
-\begin{equation}
-	\label{eq:equation3.4}
-	D[\Theta_w(\omega)] = D[\Theta(\omega)] \cdot \frac{1}{T_w} \cdot \int\limits_{- \sfrac{T_w}{2}}^{\sfrac{T_w}{2}} w^2 (t) \mathrm{d}t = const  
-\end{equation}
-
-Следовательно, спектр напряжения $u(t)$  представляет собой взвешенную сумму спектров наложенного окна $W\left( {\omega - \frac{2 \cdot \pi}{T_s} \cdot \nu}\right)$ и случайной величины $\Theta_w(\omega)$  
-\cite{Increase_Accuracy_Yelizarov2014}:
-
-\begin{equation}
-	\label{eq:equation3.5}
-	U(\omega) = \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\omega - \frac{2 \cdot \pi}{T_s} \cdot \nu}\right) + \Theta_w(\omega)  
-\end{equation}
-
-Задача измерения гармонических составляющих напряжения $u'(t)$, ограниченных во временной области окном $w(t)$ сводится к нахождению коэффициента $A_\nu$ по $M$ точкам функции $U(\omega)$ в области $v$-го пика. Шум $\Theta_w(\omega) $   определяет максимальную точность вычисления параметра гармонических составляющих напряжения в соответствии с теоретической границей Крамера-Рао. Нижняя граница Крамера-Рао является объективным показателем для определения границы дисперсии ошибки при оценке неизвестного параметра при использовании различных методов. 
-
-Найдем значение функции $U(\omega)$  в этих точках. Так как эти точки получаются при помощи вычисления БПФ дискретизированного сигнала на временном отрезке $T_w$ (ширина окна), то в результате применения этого алгоритма мы получаем значение спектра в равномерно отстоящих точках $ \omega = \frac{2 \cdot \pi}{T_w} \cdot n$. После подстановки   в \ref{eq:equation3.5} выражение в районе пика БПФ $\nu$ имеет вид:
-
-\begin{equation}
-	\label{eq:equation3.6}
-	U \left(\frac{2 \cdot \pi}{T_w} \cdot n \right) = \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot n - \frac{2 \cdot \pi}{T_s} \cdot \nu }\right) = 
-\end{equation}
-
-$$
-=  \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W \left({\frac{2 \cdot \pi}{T_w} \cdot \left( {n - \frac{T_w}{T_s} \cdot \nu} \right) } \right) + \Theta_w(\omega)
-$$
-Пусть целая часть выражения в \ref{eq:equation3.6} $ n - \frac{T_w}{T_s} \cdot \nu$  равна $r$ , а дробная часть этого выражения равна $ \bigtriangleup r$ . Тогда: 
-
-\begin{equation}
-	\label{eq:equation3.7}
-	U \left(\frac{2 \cdot \pi}{T_w} \cdot n \right) = \displaystyle\sum_{\nu=0}^{\nu=N} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot (r + \bigtriangleup r ) }\right) + \Theta_w(\omega)
-\end{equation}
-
-Таким образом, получается реализация БПФ напряжения ограниченного окном, для которой: $U = {U_0, U_1, \cdots , U_M} $ – множество из $M$ точек этого БПФ в области пика $\nu$.
-Коэффициент корреляции между множеством $U$ и эталоном $W_j$ определяется по формуле:
-
-\begin{equation}
-	\label{eq:equation3.8}
-	\displaystyle\sum_{i=1}^{i=M} U_i W_{ji} = \displaystyle\sum_{i=1}^{i=M} A_{\nu} e^{j \cdot \varphi_\nu} W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r ) }\right) \cdot W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j ) }\right) =
-\end{equation}
-
-$$
- A_{\nu} e^{j \cdot \varphi_\nu} R (\bigtriangleup r - \bigtriangleup r_j) \Theta_w(\omega)
-$$
-
-где $R (\bigtriangleup r - \bigtriangleup r_j)$ – корреляционная функция $W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r) }\right)$  и $W\left( {\frac{2 \cdot \pi}{T_w} \cdot (i + \bigtriangleup r_j) }\right)$. 
-
-При определении гармонических составляющих напряжения будет достаточно рассматривать $5$ гармоник возле максимальной гармоники спектра напряжения, т.~е. $M = 5$ \cite{Increase_Accuracy_Yelizarov2014}.
- 
-Если в качестве окна выбирается симметричная функция, то функция $W(\omega)$  и множество ее значений $W_ji$  будут действительными. С учетом этого, модуль амплитуды  $\nu$-й гармоники определяется следующим образом \cite{Increase_Accuracy_Yelizarov2014}:
-
-\begin{equation}
-	\label{eq:equation3.9}
-	A_{\nu} = \frac{1}{R(\bigtriangleup r - \bigtriangleup r_j)} \cdot \sqrt{\left({\displaystyle\sum_{i=1}^{i=M}\mathrm{Re}(U_i) \cdot W_{ji}} \right)^2 + \left({\displaystyle\sum_{i=1}^{i=M}\mathrm{Im}(U_i) \cdot W_{ji}} \right)^2 - \frac{\Theta_w(\omega)}{R(\bigtriangleup r - \bigtriangleup r_j)}}
-\end{equation}
-
-Для случая, когда эталоны $W_{ji}$ формируются достаточно часто, корреляционную функцию $R(\bigtriangleup r - \bigtriangleup r_j) $  можно считать равной $1$, тогда параметр шума $\Theta_w(\omega)$ не учитывается, а считается теоретической погрешностью метода \cite{Increase_Accuracy_Yelizarov2014}. Тогда формулу для модуля амплитуды  $\nu$-й гармоники \ref{eq:equation3.9} можно переписать следующим образом:
-\begin{equation}
-	\label{eq:equation3.10}
-	A_{\nu} =  \sqrt{\left({\displaystyle\sum_{i=1}^{i=M}\mathrm{Re}(U_i) \cdot W_{ji}} \right)^2 + \left({\displaystyle\sum_{i=1}^{i=M}\mathrm{Im}(U_i) \cdot W_{ji}} \right)^2}
-\end{equation}
-
-Соответственно, необходимо из набора  эталонов $W_ji$ выбрать тот, который наиболее точно соответствует множеству $U$. В качестве критерия точности соответствия выберем минимум выражения $ \left|{\bigtriangleup r - \bigtriangleup r_j}\right| $. Очевидно, что чем меньше значение этого выражения, тем больше значение корреляционной функции $R(\bigtriangleup r - \bigtriangleup r_j)$ и вычисляемого модуля гармоники $A_\nu$ \cite{Increase_Accuracy_Yelizarov2014}. 
-
-Наибольшее значение модуля амплитуды гармоники показывает на пару эталон-сигнал и, соответственно, на величину отклонения $\delta$ от базовой точки $B$. Частота гармоник напряжения определяются как сумма значений $B$ и $\delta$.
-Оценка гармонических составляющих напряжения методом корреляционных функций выполняется по следующему алгоритму:
-
-\begin{enumerate}
-\item вычисляется БПФ напряжения и грубо определяется местоположение основной гармоники по БПФ напряжения. Для этого необходимо определить БПФ в области $50 \pm 2$~Гц;
-
-\item если в области поиска высшей гармоники уровень составляющих амплитудного спектра ниже уровня шума, делается вывод об отсутствии соответствующей гармоники;
-
-\item из каждой области берется М точек и определяется по формуле \ref{eq:equation3.10} модуль $\nu$-ой гармоники $A_\nu$ для каждого из эталонов $W_{ji}$. Наиболее близким считается тот, который дал наибольший $A_\nu$.
-\end{enumerate}
-
-Граф-схема алгоритма метода корреляционных функций приведена на \ref{img:picture55}
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=1.3] {GSA_Cor_fanc}
-	\caption{ГСА метода корреляционных функций.}
-	\label{img:picture55}
-\end{figure}
-
-%Листинг программы, реализующий метод корреляционных функций, приведен в \textbf{приложении ?}. 
-
-На \ref{img:picture44} представлен график смещения оценки основной частоты напряжения в зависимости от уровня шума для метода корреляционных функций.
-
-Для метода корреляционных функций амплитуда  $\nu$-й гармоники напряжения определяется по формуле 	\ref{eq:equation3.10}. 
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.9] {Graph_estimating_an_offset_frequency_of_the_main_voltage}
-	\caption{График смещения оценки основной частоты напряжения 
-		в зависимости от уровня шума (метод корреляционных функций).}
-	\label{img:picture44}
-\end{figure}
-
-
-\section{Свертка} \label{sec:ch3/sect4}
+\section{Свертка} \label{sec:ch3/sect3}
 Свертка и цифровые фильтры с конечной импульсной характеристикой (КИХ) вычисляются по формуле \cite{McClellan1983Application}:
 % 1.	Макклеллан Дж. Х., Рейдер Ч.М. Применение теории чисел в цифровой обработке сигналов.: Радио и связь, 1983. 263 с.
 
@@ -359,7 +196,7 @@ $h(n)$ -- импульсный отклик системы, длиной $L$.
 Для фильтрации  узкополосных сигналов, необходимо использовать быстрые алгоритмы, так.~как. они позволяют сократить количество операций. 
 
 
-\section{Применение метода разложения двумерной свертки при реализации цифровых фильтров} \label{sec:ch3/sect5}
+\section{Применение метода разложения двумерной свертки при реализации цифровых фильтров} \label{sec:ch3/sect4}
 % Альтман Е. А., Захаренко Е. И., Васеева Т. В. Применение метода разложения двумерной свертки при реализации цифровых фильтров //Научный вестник Новосибирского государственного технического университета. – 2017. – №. 4. – С. 95-104.
 В данной статье рассматривается вопрос вычислительной эффективности одной из базовых операций для алгоритмов обработки изображений и компьютерного зрения – фильтрации изображения \cite{Gonzalez2012digital}.
 % 2. Гонсалес Р., Вудс Р. Цифровая обработка изображений. – 2012.
@@ -600,7 +437,7 @@ $\frac{9}{8n^2} \times l^2 + \frac{5}{2l^2}$ или $\frac{9}{8n^2} + \frac{5}{2
 не менее следует сделать вывод, что рассмотренные в статье алгоритмы имеют практическую ценность для вычисления коротких сверток для ядер, начиная с размера $5 \times 5 $.
 
 
-\section{Интерполированный алгоритм ДПФ} \label{sec:ch3/sect6}
+\section{Интерполированный алгоритм ДПФ} \label{sec:ch3/sect5}
 Интерполированный алгоритм ДПФ (IpDFT -- Interpolated Discrete Fourier Transform) является одним из наиболее широко изученных методов оценки \cite{santamaria2000comparative, zhang2001algorithm, qian2007interharmonics, ferreira2005accurate, xie1996nonlinear, luo2015phase, jain1979high, grandke1983interpolation, andria1989windows, offelli1989interpolation, agrez2002weighted, jacobsen2007fast, belega2009multifrequency, belega2010accuracy, duda2011dft, schoukens1992interpolated}. 
 % [156.-Santamaria I., Pantaleon C., Ibanez J. A comparative study of high-accuracy frequency estimation methods //Mechanical Systems and Signal Processing. – 2000. – Т. 14. – №. 5. – С. 819-834.]
 
@@ -1350,6 +1187,130 @@ $C_{n}$ может быть записана:
 	\label{img:spectrum_double_interpolated}
 \end{figure}
 
+\section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect6} 
+Spare FFT (SFFT, разряженное БПФ) -- алгоритм оценки спектра сигнала, содержащего малое число гармоник. В отличие от усеченного БПФ, которое находит небольшое число гармоник с заранее известным номером, SFFT находит гармоники, которые имеют более высокую амплитуду по сравнению с другими гармониками. Еще более существенное отличие SFFT от остальных БПФ заключается в том, что этот алгоритм является вероятностным и работает только для сигналов, для которых выполняются определенные условия (отсутствие в спектре большое числа гармоник с большой амплитудой, низкий уровень шума и другие).
+
+SFFT является относительно новым подходом к вычислению спектра.
+Первые публикации с идеями, лежащими в основе этого подхода, появились в
+середине 90-х годов XX века \cite{kushilevitz1993learning}, после чего начали интенсивно появляться
+новые алгоритмы для реализации этих идей \cite{hassanieh2012faster, hassanieh2012nearly, pawar2013computing, schumacher2014high, hassanieh2012simple}.
+% Kushilevitz E., Mansour Y. Learning decision trees using the Fourier spectrum //SIAM Journal on Computing. – 1993. – Т. 22. – №. 6. – С. 1331-1348.
+% Hassanieh H. et al. Faster GPS via the sparse Fourier transform //Proceedings of the 18th annual international conference on Mobile computing and networking. – 2012. – С. 353-364.
+% Hassanieh H. et al. Nearly optimal sparse Fourier transform //Proceedings of the forty-fourth annual ACM symposium on Theory of computing. – 2012. – С. 563-578.
+% Pawar S., Ramchandran K. Computing a k-sparse n-length discrete fourier transform using at most 4k samples and o (k log k) complexity //2013 IEEE International Symposium on Information Theory. – IEEE, 2013. – С. 464-468.
+% Schumacher J., Püschel M. High-performance sparse fast Fourier transforms //2014 IEEE Workshop on Signal Processing Systems (SiPS). – IEEE, 2014. – С. 1-6.
+% Hassanieh H. et al. Simple and practical algorithm for sparse Fourier transform //Proceedings of the twenty-third annual ACM-SIAM symposium on Discrete Algorithms. – Society for Industrial and Applied Mathematics, 2012. – С. 1183-1194.
+
+Основное достоинство SFFT заключается в скорости его работы при большом числе входных данных. Он может успешно применяться для анализа сигналов в таких областях, как машинное обучение, GPS трекинг, компьютерная томография и другие.
+
+
+Несмотря на обилие алгоритмов SFFT, общие принципы их работы похожи. Все алгоритмы выполняют оценку гармоник в два этапа:
+
+\begin{itemize}
+	\item выполняется процедура, традиционно называемая HashToBins, которая хэширует сигнал в несколько корзин (bin) (подробнее поясним ниже);
+	\item выполняется процедура оценки частот.
+\end{itemize}
+
+При хэшировании сигналов в несколько корзин выполняются следующие действия:
+% Что такое хэширование?
+\begin{itemize}
+	\item отчеты входного сигнала случайным образом распределяются между $B$ корзинами;
+	\item отчеты, относящиеся к одной корзине, умножаются на некоторую
+	оконную функцию (фильтр);
+	\item внутри каждой корзины отчеты объединяются в группы, внутри группы отчеты суммируются;
+	\item выполняется B БПФ над полученными в каждой корзине суммами.
+	
+	Количество корзин, оконная функция и размеры групп внутри корзин определяются в разных алгоритмах по-разному. Функция HashToBins может выполняться повторно с уточненными параметрами после второго этапа работы SFFT.
+\end{itemize}
+
+Процедура оценки частот сильно отличается от алгоритма к алгоритму, но обычно в ней присутствуют два этапа: оценка возможных позиций расположения гармоник и расчет значений этих гармоник.
+
+Наибольших успехов в получение алгоритмов с низкой оценкой сложности достигла исследовательская группа из Массачусетского технологического института \cite{bottazzi2018new}. 
+% Bottazzi G., Italiano G. F., Rutigliano G. G. A New Scalable Botnet Detection Method in the Frequency Domain //Cyber Criminology. – Springer, Cham, 2018. – С. 141-166.
+Сложность предложенных ими алгоритмов составляет $O(K \log_{2} N)$ для расчета K гармоник сигнала по N входным отсчетами (если входной сигнал содержит не более K гармоник) и $O(K log_{2} N log_{2} \frac{N}{K})$ в общем случае \cite{indyk2014sparse, indyk2014nearly}.
+% Indyk P., Kapralov M. Sparse Fourier Transform in Any Constant Dimension with Nearly-Optimal Sample Complexity in Sublinear Time. – 2014.
+% Indyk P., Kapralov M., Price E. (Nearly) sample-optimal sparse Fourier transform //Proceedings of the Twenty-Fifth Annual ACM-SIAM Symposium on Discrete Algorithms. – Society for Industrial and Applied Mathematics, 2014. – С. 480-499.
+
+Быстрые реализации SFFT для современных процессоров с набором SIMD инструкций были получены с помощью автоматического генератора кода проекта SPIRAL \cite{schumacher2014high, spiral}.
+% Schumacher J., Püschel M. High-performance sparse fast Fourier transforms //2014 IEEE Workshop on Signal Processing Systems (SiPS). – IEEE, 2014. – С. 1-6.
+
+
+На рисунке \ref{img:picture39} приведены
+экспериментальные результаты оценки производительности SFFT по сравнению с классическим БПФ.
+На нем по вертикальной оси отложено время выполнения FFT - $N^{22}$,
+по горизонтальной — количество ненулевых частот K. Вертикальные линии
+показывают время выполнения БПФ с помощью одной из наиболее оптимизированных
+библиотек для классического БПФ. Верхняя линия — время работы алгоритма SFFT для случая, когда в сигнале заведомо присутствует не более $K$ гармоник, нижняя линия — в общем случае.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=1.3] {Sparse Fourier Transform.pdf}
+	\caption{Производительность разреженного преобразования Фурье.}
+	\label{img:picture39}
+\end{figure}
+
+Как видно из графика, выигрыш в производительности разреженного преобразования Фурье при большом числе точек во входном сигнале и
+малом числе гармоник может быть в несколько тысяч раз.
+
+%%%%%%%%%%%%%%%%
+Разряженное быстрое преобразование Фурье (SFFT, Sparse Fast Fourier Transform) -- алгоритм разработанный Хайтамом Хассани (Haitham Hassanieh) и другими \cite{hassanieh2012simple} для вычисления сигналов с разреженной частотной областью. Алгоритм улучшает асимптотическое время по сравнению с другими алгоритмами \cite{hassanieh2012nearly}.
+
+Реализация SFFT на сайте http://groups.csail.mit.edu/netmit/sFFT/
+доказывает, что алгоритм быстрее, чем FFT. Однако реализация SFFT не оптимизирована для современных аппаратных функций(иерархия кэша, многопоточность, наборы векторных инструкций).
+
+На графике показано сравнение эталонной реализации SFFT и оптимизированной оптимизации SFFT и FFTW. Производительность SFFT была увеличена за счет различных оптимизаций. И теперь она так же эффективна, как высокопроизводительная библиотека FFTW для больших размеров ввода.
+
+Библиотеку SFFT используют, если необходимо вычислисть дискретное преобразование Фурье сигнала и в сигнале используют несколько частотных компонентов. Существуют три версии SFFT. Третья версия SFFT не обрабатывает сигналы с шумом.
+
+Первая и вторая версия SFFT могут применяться к зашумленным сигналам, но они работают только с определенными комбинациями входных параметров. Допустимые комбинации входных параметров представленные в таблице:
+%  http://www.spiral.net/software/sfft/doc/usage.html#computing-sparse-dfts
+\begin{table}[ht]
+	\caption{Допустимые комбинации входных параметров}%
+	\label{tbl:test3_1}%
+	\fontsize{14pt}{14pt}\selectfont
+	\begin{longtable*}[c]{|c|c|} 
+		\hline
+		Размер сигнала & Разреженность \\
+		\hline
+		$8192$ & $50$ \\
+		$16384$ & $50$ \\
+		$32768$	& $50$ \\
+		$65536$	& $50$ \\
+		$131072$ & $50$ \\
+		$262144$ & $50$ \\
+		$524288$ & $50$ \\
+		$1048576$ & $50$ \\
+		$2097152$ & $50$ \\
+		$4194304$ & $50$ \\
+		$8388608$ &	$50$ \\
+		$16777216$ & $50$ \\
+		$4194304$ & $50$ \\
+		$4194304$ & $100$ \\
+		$4194304$ & $200$ \\
+		$4194304$ & $500$ \\
+		$4194304$ & $1000$ \\
+		$4194304$ & $2000$ \\ 
+		$4194304$ & $2500$ \\
+		$4194304$ & $4000$ \\
+		\hline
+	\end{longtable*}
+\end{table}
+
+Реализация SFFT находится в экспериментальном состоянии, библиотека не предназначена в качестве замены БПФ. Библиотеку SFFT следует использовать, если необходимо вычислить ДПФ сигнала. В сигнале должно присутствовать  несколько частотных компонентов. Библиотека SFFT оптимизирована для работы на современных процессорах $x86$ c поддержкой SSE.
+
+%\cite{popovici2018large}
+%Popovici D. T., Low T. M., Franchetti F. Large bandwidth-efficient FFTs on multicore and multi-socket systems //2018 IEEE International Parallel and Distributed Processing Symposium (IPDPS). – IEEE, 2018. – С. 379-388.
+
+% http://www.spiral.net/software/sfft/doc/index.html
+% http://groups.csail.mit.edu/netmit/sFFT/
+% http://spiral.net/codegenerator.html
+
+% Васеева Т. В., Альтман Е. А., Елизаров Д. А. Информационно-измерительная система для анализа гармоник сигнала в электрической сети //САПР и моделирование в современной электронике. – 2018. – С. 131-135.
+% DOI: 10.30987/conferencearticle_5c19e5fbf19926.94126870
+
+%Публикация в эту тематику
+% R. G. McKilliam, I. V. L. Clarkson and B. G. Quinn, "Fast Sparse Period Estimation," in IEEE Signal Processing Letters, vol. 22, no. 1, pp. 62-66, Jan. 2015, doi: 10.1109/LSP.2014.2345737.
+
 \section{Метод Якобсена} \label{sec:ch3/sect7}
 Метод Якобсена основан на определении максимума спектра на основании трех точек БПФ \cite{4205098, ericjacobsen_cite, jacobsen1994local, jacobsen2007fast}. В качестве интерполируемой функции выступает квадратичная функция, графиком которой является парабола, близкая к спектру функции исследуемого напряжения (вершина параболы и максимальное значение спектра делят графики пополам). 
 Пусть для квадратичной функции $u$ с максимальным коэффициентом функции $u(f_k)$  и истинным коэффициентом, достигнутым в максимуме $u(f_k + \delta)$. Тогда можно описать значение функции   в выбранных точках $f_{k-1}, f_k , f_{k+1}$ следующим образом:
@@ -1615,131 +1576,8 @@ phz(\delta) = \pi \cdot f + \pi \cdot k
 	\caption{Спектр расширенного сигнала.}
 	\label{img:picture3.9.4}
 \end{figure}
-\section{Разряженное Быстрое Преобразование Фурье} \label{sec:ch3/sect11}
-Spare FFT (SFFT, разряженное БПФ) -- алгоритм оценки спектра сигнала, содержащего малое число гармоник. В отличие от усеченного БПФ, которое находит небольшое число гармоник с заранее известным номером, SFFT находит гармоники, которые имеют более высокую амплитуду по сравнению с другими гармониками. Еще более существенное отличие SFFT от остальных БПФ заключается в том, что этот алгоритм является вероятностным и работает только для сигналов, для которых выполняются определенные условия (отсутствие в спектре большое числа гармоник с большой амплитудой, низкий уровень шума и другие).
 
-SFFT является относительно новым подходом к вычислению спектра.
-Первые публикации с идеями, лежащими в основе этого подхода, появились в
-середине 90-х годов XX века \cite{kushilevitz1993learning}, после чего начали интенсивно появляться
-новые алгоритмы для реализации этих идей \cite{hassanieh2012faster, hassanieh2012nearly, pawar2013computing, schumacher2014high, hassanieh2012simple}.
-% Kushilevitz E., Mansour Y. Learning decision trees using the Fourier spectrum //SIAM Journal on Computing. – 1993. – Т. 22. – №. 6. – С. 1331-1348.
-% Hassanieh H. et al. Faster GPS via the sparse Fourier transform //Proceedings of the 18th annual international conference on Mobile computing and networking. – 2012. – С. 353-364.
-% Hassanieh H. et al. Nearly optimal sparse Fourier transform //Proceedings of the forty-fourth annual ACM symposium on Theory of computing. – 2012. – С. 563-578.
-% Pawar S., Ramchandran K. Computing a k-sparse n-length discrete fourier transform using at most 4k samples and o (k log k) complexity //2013 IEEE International Symposium on Information Theory. – IEEE, 2013. – С. 464-468.
-% Schumacher J., Püschel M. High-performance sparse fast Fourier transforms //2014 IEEE Workshop on Signal Processing Systems (SiPS). – IEEE, 2014. – С. 1-6.
-% Hassanieh H. et al. Simple and practical algorithm for sparse Fourier transform //Proceedings of the twenty-third annual ACM-SIAM symposium on Discrete Algorithms. – Society for Industrial and Applied Mathematics, 2012. – С. 1183-1194.
-
-Основное достоинство SFFT заключается в скорости его работы при большом числе входных данных. Он может успешно применяться для анализа сигналов в таких областях, как машинное обучение, GPS трекинг, компьютерная томография и другие.
-
-
-Несмотря на обилие алгоритмов SFFT, общие принципы их работы похожи. Все алгоритмы выполняют оценку гармоник в два этапа:
-
-\begin{itemize}
-\item выполняется процедура, традиционно называемая HashToBins, которая хэширует сигнал в несколько корзин (bin) (подробнее поясним ниже);
-\item выполняется процедура оценки частот.
-\end{itemize}
-
-При хэшировании сигналов в несколько корзин выполняются следующие действия:
-% Что такое хэширование?
-\begin{itemize}
-\item отчеты входного сигнала случайным образом распределяются между $B$ корзинами;
-\item отчеты, относящиеся к одной корзине, умножаются на некоторую
-оконную функцию (фильтр);
-\item внутри каждой корзины отчеты объединяются в группы, внутри группы отчеты суммируются;
-\item выполняется B БПФ над полученными в каждой корзине суммами.
-
-Количество корзин, оконная функция и размеры групп внутри корзин определяются в разных алгоритмах по-разному. Функция HashToBins может выполняться повторно с уточненными параметрами после второго этапа работы SFFT.
-\end{itemize}
-
-Процедура оценки частот сильно отличается от алгоритма к алгоритму, но обычно в ней присутствуют два этапа: оценка возможных позиций расположения гармоник и расчет значений этих гармоник.
-
-Наибольших успехов в получение алгоритмов с низкой оценкой сложности достигла исследовательская группа из Массачусетского технологического института \cite{bottazzi2018new}. 
-% Bottazzi G., Italiano G. F., Rutigliano G. G. A New Scalable Botnet Detection Method in the Frequency Domain //Cyber Criminology. – Springer, Cham, 2018. – С. 141-166.
-Сложность предложенных ими алгоритмов составляет $O(K \log_{2} N)$ для расчета K гармоник сигнала по N входным отсчетами (если входной сигнал содержит не более K гармоник) и $O(K log_{2} N log_{2} \frac{N}{K})$ в общем случае \cite{indyk2014sparse, indyk2014nearly}.
-% Indyk P., Kapralov M. Sparse Fourier Transform in Any Constant Dimension with Nearly-Optimal Sample Complexity in Sublinear Time. – 2014.
-% Indyk P., Kapralov M., Price E. (Nearly) sample-optimal sparse Fourier transform //Proceedings of the Twenty-Fifth Annual ACM-SIAM Symposium on Discrete Algorithms. – Society for Industrial and Applied Mathematics, 2014. – С. 480-499.
-
-Быстрые реализации SFFT для современных процессоров с набором SIMD инструкций были получены с помощью автоматического генератора кода проекта SPIRAL \cite{schumacher2014high, spiral}.
-% Schumacher J., Püschel M. High-performance sparse fast Fourier transforms //2014 IEEE Workshop on Signal Processing Systems (SiPS). – IEEE, 2014. – С. 1-6.
-
-
-На рисунке \ref{img:picture39} приведены
-экспериментальные результаты оценки производительности SFFT по сравнению с классическим БПФ.
-На нем по вертикальной оси отложено время выполнения FFT - $N^{22}$,
-по горизонтальной — количество ненулевых частот K. Вертикальные линии
-показывают время выполнения БПФ с помощью одной из наиболее оптимизированных
-библиотек для классического БПФ. Верхняя линия — время работы алгоритма SFFT для случая, когда в сигнале заведомо присутствует не более $K$ гармоник, нижняя линия — в общем случае.
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=1.3] {Sparse Fourier Transform.pdf}
-	\caption{Производительность разреженного преобразования Фурье.}
-	\label{img:picture39}
-\end{figure}
-
-Как видно из графика, выигрыш в производительности разреженного преобразования Фурье при большом числе точек во входном сигнале и
-малом числе гармоник может быть в несколько тысяч раз.
- 
-%%%%%%%%%%%%%%%%
-Разряженное быстрое преобразование Фурье (SFFT, Sparse Fast Fourier Transform) -- алгоритм разработанный Хайтамом Хассани (Haitham Hassanieh) и другими \cite{hassanieh2012simple} для вычисления сигналов с разреженной частотной областью. Алгоритм улучшает асимптотическое время по сравнению с другими алгоритмами \cite{hassanieh2012nearly}.
-
-Реализация SFFT на сайте http://groups.csail.mit.edu/netmit/sFFT/
-доказывает, что алгоритм быстрее, чем FFT. Однако реализация SFFT не оптимизирована для современных аппаратных функций(иерархия кэша, многопоточность, наборы векторных инструкций).
-
-На графике показано сравнение эталонной реализации SFFT и оптимизированной оптимизации SFFT и FFTW. Производительность SFFT была увеличена за счет различных оптимизаций. И теперь она так же эффективна, как высокопроизводительная библиотека FFTW для больших размеров ввода.
-
-Библиотеку SFFT используют, если необходимо вычислисть дискретное преобразование Фурье сигнала и в сигнале используют несколько частотных компонентов. Существуют три версии SFFT. Третья версия SFFT не обрабатывает сигналы с шумом.
-
-Первая и вторая версия SFFT могут применяться к зашумленным сигналам, но они работают только с определенными комбинациями входных параметров. Допустимые комбинации входных параметров представленные в таблице:
-%  http://www.spiral.net/software/sfft/doc/usage.html#computing-sparse-dfts
-\begin{table}[ht]
-	\caption{Допустимые комбинации входных параметров}%
-	\label{tbl:test3_1}%
-	\fontsize{14pt}{14pt}\selectfont
-	\begin{longtable*}[c]{|c|c|} 
-		\hline
-		Размер сигнала & Разреженность \\
-		\hline
-		$8192$ & $50$ \\
-		$16384$ & $50$ \\
-		$32768$	& $50$ \\
-		$65536$	& $50$ \\
-		$131072$ & $50$ \\
-		$262144$ & $50$ \\
-		$524288$ & $50$ \\
-		$1048576$ & $50$ \\
-		$2097152$ & $50$ \\
-		$4194304$ & $50$ \\
-		$8388608$ &	$50$ \\
-		$16777216$ & $50$ \\
-		$4194304$ & $50$ \\
-		$4194304$ & $100$ \\
-		$4194304$ & $200$ \\
-		$4194304$ & $500$ \\
-		$4194304$ & $1000$ \\
-		$4194304$ & $2000$ \\ 
-		$4194304$ & $2500$ \\
-		$4194304$ & $4000$ \\
-		\hline
-	\end{longtable*}
-\end{table}
-
-Реализация SFFT находится в экспериментальном состоянии, библиотека не предназначена в качестве замены БПФ. Библиотеку SFFT следует использовать, если необходимо вычислить ДПФ сигнала. В сигнале должно присутствовать  несколько частотных компонентов. Библиотека SFFT оптимизирована для работы на современных процессорах $x86$ c поддержкой SSE.
-
-%\cite{popovici2018large}
-%Popovici D. T., Low T. M., Franchetti F. Large bandwidth-efficient FFTs on multicore and multi-socket systems //2018 IEEE International Parallel and Distributed Processing Symposium (IPDPS). – IEEE, 2018. – С. 379-388.
-
-% http://www.spiral.net/software/sfft/doc/index.html
-% http://groups.csail.mit.edu/netmit/sFFT/
-% http://spiral.net/codegenerator.html
-
-% Васеева Т. В., Альтман Е. А., Елизаров Д. А. Информационно-измерительная система для анализа гармоник сигнала в электрической сети //САПР и моделирование в современной электронике. – 2018. – С. 131-135.
-% DOI: 10.30987/conferencearticle_5c19e5fbf19926.94126870
-
-%Публикация в эту тематику
-% R. G. McKilliam, I. V. L. Clarkson and B. G. Quinn, "Fast Sparse Period Estimation," in IEEE Signal Processing Letters, vol. 22, no. 1, pp. 62-66, Jan. 2015, doi: 10.1109/LSP.2014.2345737.
-
-\section{Устройство для определения гармоник или спектра сигнала электрической сети} \label{sec:ch3/sect12}
+\section{Устройство для определения гармоник или спектра сигнала электрической сети} \label{sec:ch3/sect11}
 
 Основным направлением в применении цифровой обработки сигналов является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно 
 анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. К анализатору спектра предъявляют различные требования измерений по максимальной частоте входного сигнала. Ряд Фурье представляет разложение несинусоидальной периодической функции на синусоидальные компоненты и позволяет рассматривать сигналы из временной области в частотной \cite{information-measuring2018}.
@@ -1814,17 +1652,17 @@ $N$ – длина DFT.
 	\label{img:picture3.9.2}
 \end{figure}
 
-\section{Выводы по разделу} \label{sec:ch3/sect13}
+\section{Выводы по разделу} \label{sec:ch3/sect12}
 На основании анализа, произведенного в третьем разделе, были получены следующие результаты:
 
 \begin{enumerate}
-\item Методы, основанные на интерполировании смежных гармоник, позволяют достичь высокой точности, во многих случаях достаточной для практического применения, однако они не позволяют достичь точности оптимальной несмещенной оценки.
+\item методы, основанные на интерполировании смежных гармоник, позволяют достичь высокой точности, во многих случаях достаточной для практического применения, однако они не позволяют достичь точности оптимальной несмещенной оценки;
 
-\item Можно выделить два подхода к построению алгоритмов на основе корреляционного анализа: использование итерационного процесса для нахождения частоты, амплитуды и фазы каждой гармоники и использование техники дополнения нулями сигнала с целью уплотнения гармоник в спектре сигнала. Оба метода требуют существенно больших вычислительных ресурсов, чем методы основанные на интерполировании, но обеспечивают оптимальную несмещенную оценку.
+\item можно выделить два подхода к построению алгоритмов на основе корреляционного анализа: использование итерационного процесса для нахождения частоты, амплитуды и фазы каждой гармоники и использование техники дополнения нулями сигнала с целью уплотнения гармоник в спектре сигнала. Оба метода требуют существенно больших вычислительных ресурсов, чем методы основанные на интерполировании, но обеспечивают оптимальную несмещенную оценку;
 
-\item Время расчета параметров гармоник многотонального сигнала с помощью техники дополнения нулями может быть существенно снижено за счет применения разряженного быстрого преобразования Фурье.
+\item время расчета параметров гармоник многотонального сигнала с помощью техники дополнения нулями может быть существенно снижено за счет применения разряженного быстрого преобразования Фурье;
 
-\item Реализация итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи при небольшом числе обсчитываемых гармоник обеспечивает быстродействие, близкое к итерационным методам. 
+\item реализация итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи при небольшом числе обсчитываемых гармоник обеспечивает быстродействие, близкое к итерационным методам; 
 
-\item Реализация метода дополнение нулями сигнала при использовании разряженного преобразования Фурье имеет быстродействие менее чем на порядок худшее, чем итерационные методы, при этом быстродействие не зависит от числа обсчитываемых гармоник. Также нужно отметить больший объем памяти, требуемый для этого метода, который при этом не является критичным для современных вычислительных устройств.
+\item реализация метода дополнение нулями сигнала при использовании разряженного преобразования Фурье имеет быстродействие менее чем на порядок худшее, чем итерационные методы, при этом быстродействие не зависит от числа обсчитываемых гармоник. Также нужно отметить больший объем памяти, требуемый для этого метода, который при этом не является критичным для современных вычислительных устройств.
 \end{enumerate}
