--- a/Synopsis/content.tex
+++ b/Synopsis/content.tex
@@ -30,21 +30,13 @@
 и практическая значимость представляемой работы. 
 %В~последующих главах сначала описывается общий принцип, позволяющий \dots, а~потом идёт апробация на частных примерах: \dots  и~\dots.
 
-
 \underline{\textbf{Первая глава}} посвящена %\dots
-математическим основам построения алгоритмов оценки параметров гармоник:
-\begin{itemize}
-\item Особенности сигналов в электрических сетях носят не существенный характер с точки зрения построения алгоритмов нахождения параметров гармоник. При работе с электрическими сетями обычно используют стандартные алгоритмы такого рода.
-\item Помимо обычных алгоритмов для оценки параметров гармоник в электрических сетях также используют алгоритмы, анализирующие сигналы в переходных режимах, т.~е. такие, в которых во время работы алгоритма может измениться значение какого-либо параметра. В нашей работе такие алгоритмы далее рассматриваться не будут, поскольку переходные режимы не являются целью нашей работы.
-\item Анализ имеющихся библиографических источников показывает, что нет известных публикаций в которых бы велась разработка алгоритмов, ориентированных на работу при определенном соотношении сигнал-шум, и что для анализа гармоник и интергармоник (для которых это соотношение отличается) применяются одинаковые алгоритмы.
-\item Алгоритмы оценки параметров гармоник, применяемые при работе с однотональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Вопрос о причинах снижения точности и возможности построения алгоритма, достигающего этой границы в известных научных публикациях не рассмотрен.
-\item Для решения задачи построения оптимального алгоритма для анализа спектра сигнала в электрических сетях необходимо уточнение математической модели спектра сигналов в части, описывающей точность оценки (дисперсию) параметров гармоник спектра многотонального сигнала.
-\end{itemize}
+математическим основам построения алгоритмов оценки параметров гармоник.
 
 В первой главе рассматриваются алгоритмы оценки параметров гармоник и их применение для многотональных сигналов. Произведен литературный обзор по теме диссертационных исследований.
 
 В работе представлена математическая модель сигнала в электрической сети, обобщающая результаты исследований проблем качества электроэнергии и учитывающая требования регламентирующих документов. Она позволяет проводить исследования алгоритмов анализа электрических сигналов, а также средств измерений, построенных на их основе.
-Модель сигнала электрической сети с учетом \cite{GOST30804.4.7-2013}, раздел $3.1$, связывает гармоники, высшие гармоники и интергармоники тока и напряжения электрической сети при наличии шума: 
+Модель сигнала электрической сети с учетом, раздел $3.1$, связывает гармоники, высшие гармоники и интергармоники тока и напряжения электрической сети при наличии шума: 
 %ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств. 2013; Доступно по: http://docs.cntd.ru/document/1200103652
 \begin{equation}
 	\label{eq:equation6}
@@ -77,24 +69,28 @@ $\eta$ – шум.
 
 В формулу \ref{eq:equation6} добавлены значения высших гармоник, интергармоник тока и напряжения электрической сети.
 
-
-\underline{\textbf{Вторая глава}} посвящена математическим основам построения алгоритмов оценки параметров гармоник:
-
+В результате анализа, произведенного в первом разделе, можно сделать следующие выводы:
 \begin{itemize}
-\item Математической основой для анализа спектра сигналов является преобразование Фурье. Для дискретных сигналов применяется дискретное преобразование Фурье.
+\item особенности сигналов в электрических сетях носят не существенный характер с точки зрения построения алгоритмов нахождения параметров гармоник. При работе с электрическими сетями обычно используют стандартные алгоритмы такого рода; 
+% Раздел <<Концепция определения гармоник>>.
 
-\item При анализе спектра многотонального сигнала с помощью дискретного преобразования Фурье в большинстве случаев имеются гармоники частота которых не кратна частоте основной гармоники. При оценке их параметров необходимо учитывать изменение спектра сигнала, связанное с ограниченной длиной выборки этого сигнала.
+\item помимо обычных алгоритмов для оценки параметров гармоник в электрических сетях также используют алгоритмы, анализирующие сигналы в переходных режимах, т.~е. такие, в которых во время работы алгоритма может измениться значение какого-либо параметра. В нашей работе такие алгоритмы далее рассматриваться не будут, поскольку переходные режимы не являются целью нашей работы;
+% Нет в диссертации
 
-\item При анализе спектра сигнала с ограниченной выборкой необходимо использовать оконные функции, поскольку в противном случае сигнал будет взвешен прямоугольной оконной функцией с плохой частотной характеристикой.
+\item анализ имеющихся библиографических источников показывает, что нет известных публикаций в которых бы велась разработка алгоритмов, ориентированных на работу при определенном соотношении сигнал-шум, и что для анализа гармоник и интергармоник (для которых это соотношение отличается) применяются одинаковые алгоритмы; 
+% Разделы <<Обзор обнаружения и измерения гармоник в энергосистеме>> и <<Улучшенный алгоритм частоты путем развертывания фазы методом наименьших квадратов>>.
 
-\item Применение оконной функции уменьшает количество информации, получаемое из сигнала, и, как следствие, увеличивается дисперсия оценки параметров сигнала, или, другими словами, ухудшается точность оценки параметров сигналов.
+\item алгоритмы оценки параметров гармоник, применяемые при работе с однотональными и многотональными сигналами, имеют точность оценки параметров ниже теоретической границы Крамера-Рао. Вопрос о причинах снижения точности и возможности построения алгоритма, достигающего этой границы в известных научных публикациях не рассмотрен; 
+% Раздел <<Нижняя граница Крамера-Рао>>
 
-\item Ухудшение точности оценки можно определить исходя из предложенного в главе коэффициента окна. Данный коэффициент показывает, насколько уменьшиться точность оценки амплитуды гармоники для оптимальной несмещенной оценки при применении такого окна, а также может использоваться для оценки снижения точности параметров.
-
-\item Алгоритмы для нахождения оптимальной несмещенной оценки параметров могут быть построены на основе методов оптимального приема, изучаемых в радиотехники, в частости, с помощью корреляционного анализа.
+\item для решения задачи построения оптимального алгоритма для анализа спектра сигнала в электрических сетях необходимо уточнение математической модели спектра сигналов в части, описывающей точность оценки (дисперсию) параметров гармоник спектра многотонального сигнала. 
+% Формула \ref{eq:equation6}, раздел <<Модель сигнала электрической сети>>.
 \end{itemize}
 
-Общая формула границы Крамера-Рао \cite{kay1993fundamentals, kay2013fundamentals}:
+
+\underline{\textbf{Вторая глава}} посвящена математическим основам построения алгоритмов оценки параметров гармоник.
+
+Общая формула границы Крамера-Рао:
 \begin{equation}
 	\label{eq:equation2}
 	var(\theta)\geq\frac{1}{I(\left.\theta)\right]}
@@ -120,7 +116,7 @@ $s[n;\theta]$ -- детерминированный сигнал.
 	var(\hat{\theta}) \geq \frac{\sigma^2}{\displaystyle\sum_{n=0}^{N-1} \left(\frac{\partial s [n; \theta]}{\partial\theta}\right)^2} 
 \end{equation}
 
-Неравенство Крамера-Рао для амплитуды, частоты и фазы гармоник \cite{kay1993fundamentals}:
+Неравенство Крамера-Рао для амплитуды, частоты и фазы гармоник:
 \begin{equation}
 	\label{eq:equation16}
 	var(\hat{A})\geq \frac{2  \sigma^2}{N} 
@@ -135,7 +131,7 @@ $s[n;\theta]$ -- детерминированный сигнал.
 	var(\hat{\varphi})\geq \frac{2(2N-1)}{\eta N(N+1)}  
 \end{equation}
 
-Математическая модель для оценки точности нахождения амплитуды гармоники \cite{altman2020boundary}:
+Математическая модель для оценки точности нахождения амплитуды гармоники:
 \begin{equation}
 	\label{eq:equation24}
 	var(A)\geq \frac{2\sigma^2}{N} \frac{\sum_{n=0}^{N-1}w_n^2}{\left(\sum_{n=0}^{N-1} w_n \right)^2} 			  
@@ -200,15 +196,15 @@ $A$ – амплитуда гармоники.
 
 Исследованы методы оценки спектральных составляющих:
 \begin{enumerate}
-	\item	Метод Якобсена (Jacobsen's Modified Quadratic Estimator)\cite{4205098, jacobsen1994local, jacobsen2007fast, ericjacobsen_cite};
-	\item	Два метода Квина (Quinn's Estimator, Quinn's Second Estimator)\cite{558515, 295186, 330402};
-	\item	Два метода Маклеода (Macleod's Estimator) \cite{651200, 1055282};
-	\item	Метод Грэндка (Grandke's method) \cite{4315077};
-	\item	Алгоритм параболической интерполяции (Parabolic Interpolation) \cite{Konopatskiy_2020, LACHANCE1991143, gasior2004improving, 7818824};
-	\item	Алгоритм интерполяции Гаусса (Gaussian Interpolation) \cite{gasior2004improving, gu2005leaf, gilboa2014image};
-	\item	Алгоритм, рекомендованный в ГОСТ 30804.4.7-2013 \cite{GOST30804.4.7-2013};
-	\item	Метод корреляционных функций (Correlation function method) \cite{Altman2012definition, Altman2012promotion, Altman2012improvement, WANG20175}.
-	\item Модернизированный метод корреляционных функций (Modernized method of correlation functions) \cite{Altman2012promotion, Elizarov2016analysis, Increase_Accuracy_Yelizarov2014}.
+	\item	Метод Якобсена (Jacobsen's Modified Quadratic Estimator);
+	\item	Два метода Квина (Quinn's Estimator, Quinn's Second Estimator);
+	\item	Два метода Маклеода (Macleod's Estimator);
+	\item	Метод Грэндка (Grandke's method);
+	\item	Алгоритм параболической интерполяции (Parabolic Interpolation);
+	\item	Алгоритм интерполяции Гаусса (Gaussian Interpolation);
+	\item	Алгоритм, рекомендованный в ГОСТ 30804.4.7-2013;
+	\item	Метод корреляционных функций (Correlation function method).
+	\item Модернизированный метод корреляционных функций (Modernized method of correlation functions).
 \end{enumerate}
 %B. G. Quinn, "Estimation of frequency, amplitude, and phase from the DFT of a time series," in IEEE Transactions on Signal Processing, vol. 45, no. 3, pp. 814-817, March 1997, doi: 10.1109/78.558515.
 % B. G. Quinn, "Estimating frequency by interpolation using Fourier coefficients," in IEEE Transactions on Signal Processing, vol. 42, no. 5, pp. 1264-1268, May 1994, doi: 10.1109/78.295186.
@@ -239,19 +235,29 @@ $A$ – амплитуда гармоники.
 наиболее точен, но использует большее количество математических операций,
 поэтому требует большего времени на выполнение.
 
-\underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник:
 
+В результате анализа, произведенного во втором разделе, можно сделать следующие выводы:
 \begin{itemize}
-\item Методы, основанные на интерполировании смежных гармоник, позволяют достичь высокой точности, во многих случаях достаточной для практического применения, однако они не позволяют достичь точности оптимальной несмещенной оценки.
-
-\item Можно выделить два подхода к построению алгоритмов на основе корреляционного анализа: использование итерационного процесса для нахождения частоты, амплитуды и фазы каждой гармоники и использование техники дополнения нулями сигнала с целью уплотнения гармоник в спектре сигнала. Оба метода требуют существенно больших вычислительных ресурсов, чем методы основанные на интерполировании, но обеспечивают оптимальную несмещенную оценку.
-
-\item Время расчета параметров гармоник многотонального сигнала с помощью техники дополнения нулями может быть существенно снижено за счет применения разряженного быстрого преобразования Фурье.
-
-\item Реализация итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи при небольшом числе обсчитываемых гармоник обеспечивает быстродействие, близкое к итерационным методам.
-
-\item Реализация метода дополнение нулями сигнала при использовании разряженного преобразования Фурье имеет быстродействие менее чем на порядок худшее, чем итерационные методы, при этом быстродействие не зависит от числа обсчитываемых гармоник. Также нужно отметить больший объем памяти, требуемый для этого метода, который при этом не является критичным для современных вычислительных устройств.
+\item математической основой для анализа спектра сигналов является преобразование Фурье. Для дискретных сигналов применяется дискретное преобразование Фурье; 
+% Разделы <<Быстрое преобразование Фурье>> и <<Дискретное преобразование Фурье>>
+	
+\item при анализе спектра многотонального сигнала с помощью дискретного преобразования Фурье в большинстве случаев имеются гармоники частота которых не кратна частоте основной гармоники. При оценке их параметров необходимо учитывать изменение спектра сигнала, связанное с ограниченной длиной выборки этого сигнала;
+%  Раздел <<Дискретное преобразование Фурье>>
+	
+\item при анализе спектра сигнала с ограниченной выборкой необходимо использовать оконные функции, поскольку в противном случае сигнал будет взвешен прямоугольной оконной функцией с плохой частотной характеристикой;
+% Раздел <<Граница Крамера-Рао амплитуды однотонального сигнала для методов ее оценки с использованием оконных функций>>, приложение А - Основные свойства весовых функций.
+	
+\item применение оконной функции уменьшает количество информации, получаемое из сигнала, и, как следствие, увеличивается дисперсия оценки параметров сигнала, или, другими словами, ухудшается точность оценки параметров сигналов;
+% Раздел <<Нижняя граница Крамера-Рао>>
+	
+\item ухудшение точности оценки можно определить исходя из предложенного в главе коэффициента окна. Данный коэффициент показывает, насколько уменьшиться точность оценки амплитуды гармоники для оптимальной несмещенной оценки при применении такого окна, а также может использоваться для оценки снижения точности параметров;
+% Раздел <<Нижняя граница Крамера-Рао>>
+	
+\item алгоритмы для нахождения оптимальной несмещенной оценки параметров могут быть построены на основе методов оптимального приема, изучаемых в радиотехники, в частости, с помощью корреляционного анализа.
+% Раздел <<Корреляция>>
 \end{itemize}
+
+\underline{\textbf{Третья глава}} посвящена исследованию численных методов для нахождение оптимальной несмещенной оценки параметров гармоник:
 
 Разработан прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов. Алгоритм поиска гармоник представлен на рисунке \ref{img:Diagram_GSA}:
 \begin{figure}[ht]
@@ -262,7 +268,7 @@ $A$ – амплитуда гармоники.
 \end{figure}
 
 Рассмотрели применение метода разложения двумерной свертки при
-реализации цифровых фильтров. Линейная двумерная дискретная свертка определяется следующей формулой \cite{decomposition_method_application2017}:
+реализации цифровых фильтров. Линейная двумерная дискретная свертка определяется следующей формулой:
 \begin{equation}
 	\label{eq:equation3.5.1}
 	CON_{j1,j2} = \sum_{i1 =0}^{n1-1} \sum_{i2 =0}^{n2-1} x_{i1,i2} \cdot y_{i1-j1,i2-j2}
@@ -274,7 +280,7 @@ $A$ – амплитуда гармоники.
 	COR_{j1,j2} = \sum_{i1 =0}^{n1-1} \sum_{i2 =0}^{n2-1} x_{i1,i2} \cdot y_{i1+j1,i2+j2}
 \end{equation}
 
-Будем рассматривать три варианта вычисления двумерной свертки. Первый вариант – вычисление двумерной свертки непосредственно по формуле \ref{eq:equation3.5.1}. Второй вариант – использование предложенного в \cite{550562} алгоритма разложения двумерной свертки в несколько двумерных сверток меньших размеров. Третий вариант – использование быстрых алгоритмов одномерной свертки \cite{MOU1987377} для вычисления двумерной свертки.
+Будем рассматривать три варианта вычисления двумерной свертки. Первый вариант – вычисление двумерной свертки непосредственно по формуле \ref{eq:equation3.5.1}. Второй вариант – использование предложенного в алгоритма разложения двумерной свертки в несколько двумерных сверток меньших размеров. Третий вариант – использование быстрых алгоритмов одномерной свертки для вычисления двумерной свертки.
 $$
 	CON_{j1,j2} = 
 	\begin{bmatrix}
@@ -327,6 +333,24 @@ $$
 	(A_0 - A_1)
 \end{equation}
 
+В результате анализа, произведенного в третьем разделе, можно сделать следующие выводы:
+\begin{itemize}
+\item методы, основанные на интерполировании смежных гармоник, позволяют достичь высокой точности, во многих случаях достаточной для практического применения, однако они не позволяют достичь точности оптимальной несмещенной оценки;
+% Раздел <<Интерполяционные методы>>
+	
+\item можно выделить два подхода к построению алгоритмов на основе корреляционного анализа: использование итерационного процесса для нахождения частоты, амплитуды и фазы каждой гармоники и использование техники дополнения нулями сигнала с целью уплотнения гармоник в спектре сигнала. Оба метода требуют существенно больших вычислительных ресурсов, чем методы основанные на интерполировании, но обеспечивают оптимальную несмещенную оценку;
+% Разделы <<Модернизация метода корреляционных функций>>, <<Прямой корреляционный метод с использованием быстрых алгоритмов обработки сигналов>>
+	
+\item время расчета параметров гармоник многотонального сигнала с помощью техники дополнения нулями может быть существенно снижено за счет применения разряженного быстрого преобразования Фурье;
+% Интерполированный алгоритм ДПФ
+	
+\item реализация итерационного оптимизационного метода нахождения гармоник на основе чисел Фиббоначи при небольшом числе обсчитываемых гармоник обеспечивает быстродействие, близкое к итерационным методам;
+% Метод чисел Фибоначчи
+	
+\item реализация метода дополнение нулями сигнала при использовании разряженного преобразования Фурье имеет быстродействие менее чем на порядок худшее, чем итерационные методы, при этом быстродействие не зависит от числа обсчитываемых гармоник. Также нужно отметить больший объем памяти, требуемый для этого метода, который при этом не является критичным для современных вычислительных устройств.
+% Разряженное Быстрое Преобразование Фурье
+\end{itemize}
+
 %Можно сослаться на свои работы в автореферате. Для этого в файле
 %\verb!Synopsis/setup.tex! необходимо присвоить положительное значение
 %счётчику \verb!\setcounter{usefootcite}{1}!. В таком случае ссылки на
@@ -334,18 +358,7 @@ $$
 %Изложенные в третьей главе результаты опубликованы в~\cite{vakbib1, vakbib2}.
 %Использование подстрочных ссылок внутри таблиц может вызывать проблемы.
 
-В \underline{\textbf{четвертой главе}} приведено описание применения алгоритмов оценки параметров многотональных сигналов для анализа гармоник и интергармоник в электрических сетях на железнодорожном транспорте:
-
-\begin{itemize}
-
-\item В современных стандартах по анализу спектра в электрических сетях большее внимание уделяется нахождению интергармонических составляющих. Поскольку интергармонические составляющие имеют малую энергию по отношению к другим гармоникам и шуму, к алгоритмам для нахождения параметров гармоник возрастают требования по точности определения амплитуды в условиях высокого шума.
-
-\item В стандартах также указывается требования о нахождение всех гармоник по 40 включительно, что, вместе с требованием о нахождении интеграмоник приводит к большому числу анализируемых гармонических составляющих сигнала.
-
-\item Исходя из требований стандарта и анализа свойств изученных алгоритмов для анализа спектра сигнала в силовых электрических сетях железнодорожного транспорта рекомендуется использование метода дополнения сигнала нулями с применением разряженного преобразования Фурье.
-
-\item Время расчета спектра реального сигнала этим методом на современном компьютере начального уровня составляет единицы секунд, что позволяет говорить о его приемлемом быстродействии для решения практических задач.
-\end{itemize}
+В \underline{\textbf{четвертой главе}} приведено описание применения алгоритмов оценки параметров многотональных сигналов для анализа гармоник и интергармоник в электрических сетях на железнодорожном транспорте.
 
 В четвертом разделе рассматривается понятие качество электрической энергии (КЭ) и описываются стандарты, определяющие состав показателей КЭ и методики измерений. По результатам анализа проводится сравнение российских и иностранных стандартов, описывающих требования и нормы КЭ.
 
@@ -355,6 +368,20 @@ $$
 	}
 	\caption{Развитие государственных стандартов в области контроля КЭ.}\label{img:picture1}
 \end{figure} 
+
+В результате анализа, произведенного в четвертом разделе, можно сделать следующие выводы:
+\begin{itemize}
+\item в современных стандартах по анализу спектра в электрических сетях большее внимание уделяется нахождению интергармонических составляющих. Поскольку интергармонические составляющие имеют малую энергию по отношению к другим гармоникам и шуму, к алгоритмам для нахождения параметров гармоник возрастают требования по точности определения амплитуды в условиях высокого шума;
+
+\item в стандартах также указывается требования о нахождение всех гармоник по 40 включительно, что, вместе с требованием о нахождении интеграмоник приводит к большому числу анализируемых гармонических составляющих сигнала;
+% Раздел <<Понятие качества электрической энергии>>
+
+\item исходя из требований стандарта и анализа свойств изученных алгоритмов для анализа спектра сигнала в силовых электрических сетях железнодорожного транспорта рекомендуется использование метода дополнения сигнала нулями с применением разряженного преобразования Фурье.
+% Не отражено
+
+\item время расчета спектра реального сигнала этим методом на современном компьютере начального уровня составляет единицы секунд, что позволяет говорить о его приемлемом быстродействии для решения практических задач.
+% Не отражено
+\end{itemize}
 
 В \underline{\textbf{заключении}} приведены основные результаты работы, которые заключаются в следующем:
 \input{common/concl}
