--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -219,4 +219,15 @@
   authorscopus = {true},
 }
 
+@Article{Altman2020boundary2,
+  author    = {Альтман, ЕА and Васеева, ТВ and Александров, АВ},
+  journal   = {Динамика систем, механизмов и машин},
+  title     = {Граница Крамера-Рао для амплитуды гармоники при использовании оконных функций},
+  year      = {2020},
+  number    = {2},
+  pages     = {145--152},
+  volume    = {8},
+  publisher = {федеральное государственное бюджетное образовательное учреждение высшего~…},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
