--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -151,6 +151,8 @@ Carlos~Joao~Ramos, Antonio~Pina~Martins, Adriano~da~Silva~Carvalho \cite{ramos20
 {\probation}
 Основные результаты работы докладывались~на:
 \begin{enumerate}
+\item Инновационные проекты и технологии в образовании, промышленности и на транспорте. Материалы научной конференции, посвященной Дню Российской науки. Министерство транспорта Российской Федерации, Федеральное агентство железнодорожного транспорта, Омский государственный университет путей сообщения \cite{Altman2020boundary2}
+
 \item Инновационные проекты и технологии в образовании, промышленности и на транспорте \cite{comparative_study2020}.  
 
 \item Инновации в информационных технологиях, машиностроении и автотранспорте. Сборник материалов III Международной научно-практической конференции \cite{complexity_assessment2019}.
