--- a/Dissertation/part4.tex
+++ b/Dissertation/part4.tex
@@ -139,13 +139,19 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 
 Группа международных стандартов в области контроля КЭ:
 \begin{itemize}
-	\item Стандарт IEEE~519--2014: рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах (IEEE~519--2014 -- IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems)\cite{IEEE_519-2014}. 
-	\item Стандарт IEEE~1159--2019: рекомендуемая практика IEEE для мониторинга качества электроэнергии (1159--2019 -- IEEE Recommended Practice for Monitoring Electric Power Quality) \cite{IEEE_1159-2019}. 
-	\item Стандарт 1159.3--2019: рекомендуемая практика IEEE для формата обмена данными о качестве электроэнергии (1159.3--2019 -- IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF)\cite{IEEE_1159.3-2019}.
-	\item Стандарт IEEE~1250-2018 -- Руководство IEEE по выявлению и улучшению качества напряжения в энергосистемах (IEEE~1250--2018 -- IEEE Guide for Identifying and Improving Voltage Quality in Power Systems)\cite{IEEE_1250-2018}.
-	\item Стандарт IEEE~1409--2012 -- Руководство IEEE по применению силовой электроники для повышения качества электроэнергии в распределительных системах. Номинальные значения: от 1 до 38~кВ. (IEEE~1409--2012 -- IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1~kV Through 38~kV)\cite{IEEE_1409-2012}.
-	\item Стандарт IEEE~1453-2015: рекомендуемая практика IEEE для анализа колеблющихся установок в энергосистемах (IEEE~1453--2015 -- IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems).
-	\item Стандарт IEEE~1564--2014 -- Руководство IEEE по показателям падения напряжения (IEEE~1564--2014 -- IEEE Guide for Voltage Sag Indices) \cite{IEEE_1453-2015}.
+\item стандарт IEEE~519--2014: рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах (IEEE~519--2014 -- IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems)\cite{IEEE_519-2014};
+	 
+\item стандарт IEEE~1159--2019: рекомендуемая практика IEEE для мониторинга качества электроэнергии (1159--2019 -- IEEE Recommended Practice for Monitoring Electric Power Quality) \cite{IEEE_1159-2019}; 
+
+\item стандарт 1159.3--2019: рекомендуемая практика IEEE для формата обмена данными о качестве электроэнергии (1159.3--2019 -- IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF)\cite{IEEE_1159.3-2019};
+
+\item стандарт IEEE~1250-2018 -- Руководство IEEE по выявлению и улучшению качества напряжения в энергосистемах (IEEE~1250--2018 -- IEEE Guide for Identifying and Improving Voltage Quality in Power Systems)\cite{IEEE_1250-2018};
+
+\item стандарт IEEE~1409--2012 -- Руководство IEEE по применению силовой электроники для повышения качества электроэнергии в распределительных системах. Номинальные значения: от 1 до 38~кВ. (IEEE~1409--2012 -- IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1~kV Through 38~kV)\cite{IEEE_1409-2012};
+
+\item стандарт IEEE~1453-2015: рекомендуемая практика IEEE для анализа колеблющихся установок в энергосистемах (IEEE~1453--2015 -- IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems);
+
+\item стандарт IEEE~1564--2014 -- Руководство IEEE по показателям падения напряжения (IEEE~1564--2014 -- IEEE Guide for Voltage Sag Indices) \cite{IEEE_1453-2015}.
 \end{itemize}
 
 Группа международных стандартов описывает факторы, влияющие на КЭ \cite{IEEE_519-2014, IEEE_1159-2019, IEEE_1159.3-2019, IEEE_1250-2018, IEEE_1564-2014, IEEE_1409-2012, IEEE_1453-2015, IEEE_1159-2009}:
